<resources>
    <string name="app_name">Byblos Mobile</string>
    <string name="loginBtn">Login</string>
    <string name="signupBtn">Signup</string>
    <string name="mainText">Byblos</string>

    <string name="username_hint">(Please enter a username)</string>
    <string name="password_hint">(Please enter a password)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="email_hint">(Please enter an email)</string>
    <string name="email">Email</string>
    <string name="role">Please select a role:</string>
    <string name="customer_role">Customer</string>
    <string name="employee_role">Employee</string>
    <string name="admin_role">Admin</string>
    <string name="title_activity_welcome_page">activity_welcomePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="greeting">Welcome Back To BYBLOS!</string>
    <string name="userName">username</string>
    <string name="logout">Log</string>
    <string name="logoutWelcomePage">Logout</string>
    <string name="maintext">BYBLOS</string>
    <string name="greeting3">"You are Logged in as "</string>
    <string name="roleGreeting">You are logged in as</string>
    <string name="roleType">Role</string>
    <string name="greetingw">"You logged in as "</string>
    
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_service">add Service</string>
    <string name="delete_service">Delete SERVICE</string>
    <string name="delete_branch">delete Branch</string>
    <string name="back_to_mainpage">Back TO MainPage</string>
    <string name="delete_serviceCreated">DELETE SERVICE</string>
    <string name="deleteOrEditServiceButton">delete Or Edit Service</string>
    <!--    <string name="addBranch">Add/Edit Branch</string>-->
<!--    <string name="deleteBranches">Delete Branch</string>-->

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="startHour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="endHour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

</resources>