<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#84B4C3"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setLogout"
                android:text="@string/logoutWelcomePage"
                android:textColor="#1E1C1C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="93dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greeting1"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Hello, "
                    android:textColor="#FDFCFC"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/userName"
                    android:textColor="#FAF7F7"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/greeting2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/greeting"
                    android:textColor="#F8F8F8"
                    android:textSize="34sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greeting3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:text="@string/greeting3"
                    android:textColor="#FDFDFD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/roleWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/roleType"
                    android:textColor="#FDFBFB"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adminVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="26dp" />

                <LinearLayout
                    android:id="@+id/serviceManagementLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/AddService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="openServiceActivity"
                        android:text="@string/add_service" />

                    <Button
                        android:id="@+id/DeleteService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="openServiceActivity"
                        android:text="@string/delete_service" />

                    <Button
                        android:id="@+id/editService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="openServiceActivity"
                        android:text="EDIT Service" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp" />

                <LinearLayout
                    android:id="@+id/deleteBranchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/deleteBranch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="switchToDeleteBranch"
                        android:text="@string/delete_branch" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="19dp" />

                <LinearLayout
                    android:id="@+id/deleteCustomerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/deleteCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="switchToDeleteCustomer"
                        android:text="Delete Customer" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/wcpdiagram" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>