<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#84B4C3"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/logoutWelcomePage"
                android:textColor="#1E1C1C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="93dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greeting1"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Hello, "
                    android:textColor="#FDFCFC"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/userName"
                    android:textColor="#FAF7F7"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/greeting2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/greeting"
                    android:textColor="#F8F8F8"
                    android:textSize="34sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greeting3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:text="@string/greeting3"
                    android:textColor="#FDFDFD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/roleWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/roleType"
                    android:textColor="#FDFBFB"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adminVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="51dp" />

                <TextView
                    android:id="@+id/ServiceSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Services:" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/AddService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Button"
                        tools:text="@string/add" />

                    <Button
                        android:id="@+id/DeleteService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete" />

                    <Button
                        android:id="@+id/EditService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="38dp" />

                <TextView
                    android:id="@+id/branchSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Branch:" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addBranch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add" />

                    <Button
                        android:id="@+id/deleteBranch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete" />

                    <Button
                        android:id="@+id/editBranch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="19dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/wcpdiagram" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>