<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84B4C3"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#84B4C3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-57dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:backgroundTint="#84B4C3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/maintext"
                android:textColor="#F6F3F3"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car1" />

                <Button
                    android:id="@+id/loginBtnMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#244C75"
                    android:onClick="onLogin"
                    android:text="@string/loginBtn"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signupBtnMain"
                    android:layout_width="257dp"
                    android:layout_height="60dp"
                    android:onClick="onSignup"
                    android:text="@string/signupBtn"
                    android:textColor="#0C0C0C"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>